// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty screen correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          STEPS OF FAITH
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/footprints.png",
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "AmaticSC-Bold",
            },
            Object {
              "color": "#007398",
              "fontSize": 42,
              "paddingTop": 10,
            },
          ]
        }
      >
        steps of faith
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "textAlign": "center",
            },
          ]
        }
      >
        You don't have any Steps of Faith.
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "textAlign": "center",
            },
          ]
        }
      >
        Choose a person and add some new steps.
      </Text>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Object {
            "bottom": 20,
            "left": 50,
            "position": "absolute",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="bottomButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "alignItems": "center",
                  "height": 48,
                  "width": 650,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {},
                  ],
                ]
              }
            >
              TAKE A STEP WITH SOMEONE
            </Text>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </View>
</View>
`;

exports[`renders loading screen correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          STEPS OF FAITH
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 2,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 10,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../assets/gifs/HappyBlueLoop.gif",
            }
          }
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 2,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "AmaticSC-Bold",
              },
              Object {
                "color": "#007398",
                "fontSize": 64,
                "paddingVertical": 0,
              },
            ]
          }
        >
          loading
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 2,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders screen with steps correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          STEPS OF FAITH
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 8,
            "elevation": 4,
            "flexDirection": "row",
            "marginHorizontal": 16,
            "marginVertical": 8,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 2,
          },
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 0,
            "marginBottom": 5,
            "marginHorizontal": 0,
            "marginVertical": 0,
            "position": "relative",
            "shadowColor": "#B4B6BA",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 2,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "padding": 25,
              "paddingTop": 35,
            },
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../assets/images/footprints.png",
            }
          }
          style={
            Object {
              "height": 60,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontSize": 24,
                "fontWeight": "300",
                "paddingTop": 5,
                "textAlign": "center",
              },
            ]
          }
        >
          Steps of Faith
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#505256",
                "fontSize": 16,
                "paddingHorizontal": 50,
                "paddingVertical": 5,
                "textAlign": "center",
              },
            ]
          }
        >
          Choose a person in People view to add a new step
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "right": 10,
              "top": 10,
            },
            Object {},
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/closeIcon.png",
                }
              }
              style={
                Object {
                  "margin": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <RCTScrollView
      ListFooterComponent={null}
      contentContainerStyle={
        Object {
          "paddingVertical": 8,
        }
      }
      data={
        Array [
          Object {
            "__typename": "Step",
            "community": Object {
              "__typename": "Community",
              "id": "3",
            },
            "id": "1",
            "receiver": Object {
              "__typename": "Person",
              "fullName": "Kali Stamm",
              "id": "2",
            },
            "reminder": Object {
              "__typename": "StepReminder",
              "id": "4",
              "nextOccurrenceAt": "2014-10-17T09:34:50.933Z",
              "reminderType": "once",
            },
            "title": "Repellat quisquam recusandae alias consequuntur corporis.",
          },
          Object {
            "__typename": "Step",
            "community": Object {
              "__typename": "Community",
              "id": "7",
            },
            "id": "5",
            "receiver": Object {
              "__typename": "Person",
              "fullName": "Connor Kihn",
              "id": "6",
            },
            "reminder": Object {
              "__typename": "StepReminder",
              "id": "8",
              "nextOccurrenceAt": "2014-09-11T09:20:29.756Z",
              "reminderType": "once",
            },
            "title": "Ratione ut sunt qui amet iure ut libero qui recusandae.",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReached={[Function]}
      onEndReachedThreshold={0.25}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onRefresh={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function]}
          refreshing={false}
        />
      }
      refreshing={false}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      testID="stepsList"
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <RCTRefreshControl />
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <StepItem
            onPressName={[Function]}
            onSelect={[Function]}
            step={
              Object {
                "__typename": "Step",
                "community": Object {
                  "__typename": "Community",
                  "id": "3",
                },
                "id": "1",
                "receiver": Object {
                  "__typename": "Person",
                  "fullName": "Kali Stamm",
                  "id": "2",
                },
                "reminder": Object {
                  "__typename": "StepReminder",
                  "id": "4",
                  "nextOccurrenceAt": "2014-10-17T09:34:50.933Z",
                  "reminderType": "once",
                },
                "title": "Repellat quisquam recusandae alias consequuntur corporis.",
              }
            }
            testID="stepItem"
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <StepItem
            onPressName={[Function]}
            onSelect={[Function]}
            step={
              Object {
                "__typename": "Step",
                "community": Object {
                  "__typename": "Community",
                  "id": "7",
                },
                "id": "5",
                "receiver": Object {
                  "__typename": "Person",
                  "fullName": "Connor Kihn",
                  "id": "6",
                },
                "reminder": Object {
                  "__typename": "StepReminder",
                  "id": "8",
                  "nextOccurrenceAt": "2014-09-11T09:20:29.756Z",
                  "reminderType": "once",
                },
                "title": "Ratione ut sunt qui amet iure ut libero qui recusandae.",
              }
            }
            testID="stepItem"
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`stepsList onEndReached should paginate when the end of the scroll list is reached 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -420,10 +420,50 @@
                \\"nextOccurrenceAt\\": \\"2014-09-11T09:20:29.756Z\\",
                \\"reminderType\\": \\"once\\",
              },
              \\"title\\": \\"Ratione ut sunt qui amet iure ut libero qui recusandae.\\",
            },
+           Object {
+             \\"__typename\\": \\"Step\\",
+             \\"community\\": Object {
+               \\"__typename\\": \\"Community\\",
+               \\"id\\": \\"11\\",
+             },
+             \\"id\\": \\"9\\",
+             \\"receiver\\": Object {
+               \\"__typename\\": \\"Person\\",
+               \\"fullName\\": \\"Samantha Tremblay\\",
+               \\"id\\": \\"10\\",
+             },
+             \\"reminder\\": Object {
+               \\"__typename\\": \\"StepReminder\\",
+               \\"id\\": \\"12\\",
+               \\"nextOccurrenceAt\\": \\"2019-08-24T10:48:02.286Z\\",
+               \\"reminderType\\": \\"once\\",
+             },
+             \\"title\\": \\"Repudiandae esse blanditiis natus et eos itaque velit.\\",
+           },
+           Object {
+             \\"__typename\\": \\"Step\\",
+             \\"community\\": Object {
+               \\"__typename\\": \\"Community\\",
+               \\"id\\": \\"15\\",
+             },
+             \\"id\\": \\"13\\",
+             \\"receiver\\": Object {
+               \\"__typename\\": \\"Person\\",
+               \\"fullName\\": \\"Dorcas Dach\\",
+               \\"id\\": \\"14\\",
+             },
+             \\"reminder\\": Object {
+               \\"__typename\\": \\"StepReminder\\",
+               \\"id\\": \\"16\\",
+               \\"nextOccurrenceAt\\": \\"2019-01-20T00:49:00.772Z\\",
+               \\"reminderType\\": \\"once\\",
+             },
+             \\"title\\": \\"Et porro ut et ipsam explicabo eligendi occaecati debitis.\\",
+           },
          ]
        }
        disableVirtualization={false}
        getItem={[Function anonymous]}
        getItemCount={[Function anonymous]}
@@ -522,9 +562,80 @@
                }
              }
              testID=\\"stepItem\\"
            />
          </View>
+         <View
+           onLayout={[Function onLayout]}
+           style={null}
+         >
+           <StepItem
+             onPressName={[Function handleNavToPerson]}
+             onSelect={[Function handleRowSelect]}
+             step={
+               Object {
+                 \\"__typename\\": \\"Step\\",
+                 \\"community\\": Object {
+                   \\"__typename\\": \\"Community\\",
+                   \\"id\\": \\"11\\",
+                 },
+                 \\"id\\": \\"9\\",
+                 \\"receiver\\": Object {
+                   \\"__typename\\": \\"Person\\",
+                   \\"fullName\\": \\"Samantha Tremblay\\",
+                   \\"id\\": \\"10\\",
+                 },
+                 \\"reminder\\": Object {
+                   \\"__typename\\": \\"StepReminder\\",
+                   \\"id\\": \\"12\\",
+                   \\"nextOccurrenceAt\\": \\"2019-08-24T10:48:02.286Z\\",
+                   \\"reminderType\\": \\"once\\",
+                 },
+                 \\"title\\": \\"Repudiandae esse blanditiis natus et eos itaque velit.\\",
+               }
+             }
+             testID=\\"stepItem\\"
+           />
+         </View>
+         <View
+           onLayout={[Function onLayout]}
+           style={null}
+         >
+           <StepItem
+             onPressName={[Function handleNavToPerson]}
+             onSelect={[Function handleRowSelect]}
+             step={
+               Object {
+                 \\"__typename\\": \\"Step\\",
+                 \\"community\\": Object {
+                   \\"__typename\\": \\"Community\\",
+                   \\"id\\": \\"15\\",
+                 },
+                 \\"id\\": \\"13\\",
+                 \\"receiver\\": Object {
+                   \\"__typename\\": \\"Person\\",
+                   \\"fullName\\": \\"Dorcas Dach\\",
+                   \\"id\\": \\"14\\",
+                 },
+                 \\"reminder\\": Object {
+                   \\"__typename\\": \\"StepReminder\\",
+                   \\"id\\": \\"16\\",
+                   \\"nextOccurrenceAt\\": \\"2019-01-20T00:49:00.772Z\\",
+                   \\"reminderType\\": \\"once\\",
+                 },
+                 \\"title\\": \\"Et porro ut et ipsam explicabo eligendi occaecati debitis.\\",
+               }
+             }
+             testID=\\"stepItem\\"
+           />
+         </View>
+         <View
+           style={
+             Object {
+               \\"height\\": 0,
+             }
+           }
+         />
        </View>
      </RCTScrollView>
    </View>
  </View>"
`;
